updated files as per install guidelines

--- a/deploy-as-code/charts/environments/env-secrets.yaml
+++ b/deploy-as-code/charts/environments/env-secrets.yaml
@@ -1,7 +1,7 @@
 secrets:
     db:
         username: <db_username>
-        password: test1234
+        password: test@123
         flywayUsername: <db_username>
         flywayPassword: test1234
     egov-filestore:
@@ -9,7 +9,7 @@ secrets:
         awssecretkey: bxjcsncajsb
     user:
         username: admin
-        password: eGov@123
+        password: test@123
     egov-enc-service:
         master_password: demo
         master_salt: q7.fr.cr
